--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "url": "https://github.com/shapeshed/validotron.git"
   },
   "devDependencies": {
-    "mocha": ">=0.14.1"
+    "mocha": "1.8.1",
+    "grunt": "0.4.0",
+    "grunt-contrib-jshint": "0.2.0",
+    "grunt-mocha-test": "0.2.0",
+    "grunt-contrib-watch": "0.3.1"
   },
   "bugs": {
     "url": "https://github.com/shapeshed/validotron/issues"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "grunt --stack build"
   },
   "licenses": [
     {
